# foreclosure-cases

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  case_table.html  page.html
examples/: usage.rs
outputs/: test.json
prps/: projectplan.md  tasks.md
src/: case.rs  case_scraper.rs  jdscraper.rs  main.rs  scraper.rs
src/scrape/: mod.rs
src/scrape/judicial/: cases.rs  judiciary.rs  mod.rs
src/sites/: builder.rs  judicial.rs  mod.rs  provider.rs
