[package]
name = "foreclose-scrape"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = [
    "cookies",
    "gzip",
    "blocking",
    "rustls-tls",
] }
scraper = "0.14"
select = "0.6"
tokio = { version = "1", features = ["full"] }
thirtyfour = "0.32.0-rc.9"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
